--- a/package.json
+++ b/package.json
@@ -9,16 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-native-firebase/app": "^16.4.2",
+    "@react-native-firebase/auth": "^16.4.2",
+    "@react-native-firebase/firestore": "^16.4.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~44.0.2",
+    "expo-dev-client": "~0.8.6",
+    "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "native-base": "^3.4.21",
+    "phosphor-react-native": "^1.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
